--- a/subapps/django_login/templates/login.html
+++ b/subapps/django_login/templates/login.html
@@ -4,22 +4,23 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>CryptIA</title>
+  <title>WebAPP</title>
+  <link rel="shortcut icon" type="image/jpg" href="{% static 'favicon.ico' %}"/>
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 
   <!-- CSS GLOBAL -->
-  <link rel="stylesheet" href="{% static 'plugins/bootstrap/bootstrap.min.css' %}">
-  <link rel="stylesheet" href="{% static 'font-awesome/css/font-awesome.min.css' %}">
-  <link rel="stylesheet" href="{% static 'node_modules/admin-lte/dist/css/adminlte.min.css' %}">
-  <link rel="stylesheet" href="{% static 'css/admin-lte-extended.css' %}">
+  <link rel="stylesheet" href="{% static 'node_modules/bootstrap/dist/css/bootstrap.css' %}">
+  <link rel="stylesheet" href="{% static 'node_modules/@fortawesome/fontawesome-free/css/all.css' %}">
+  <link rel="stylesheet" href="{% static 'node_modules/admin-lte/dist/css/adminlte.css' %}">
 
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
 
   <style>
     .form-control-feedback{
-      margin: -35px 10px;
-      font-size: 20px;
+      margin: -37px 10px;
+      font-size: 20px!important;
       float: right;
+      color: #666;
     }
 
   </style>
@@ -29,8 +30,8 @@
 <div class="login-box">
   <div class="login-logo">
     <a href="#">
-      <span style="font-size:56px;color:black"><b>CryptIA</b></span><br>
-      <span style="font-size:26px"><b>IA to manage cryptocurrencies</span>
+      <span style="font-size:56px;color:black"><b>Application</b></span><br>
+      <span style="font-size:26px"><b>Small description of app</span>
     </a>
   </div>
   <div class="login-box-body">
@@ -40,21 +41,18 @@
       {% csrf_token %}
       <div class="form-group has-feedback">
         <input type="text" name="username" id="id_username" class="form-control" placeholder="Usuario">
-        <span class="fa fa-envelope form-control-feedback"></span>
+        <i class="fas fa-envelope form-control-feedback"></i>
       </div>
       <div class="form-group has-feedback">
         <input type="password" name="password" id="id_password" class="form-control" placeholder="Contraseña">
-        <span style="font-size:26px" class="fa fa-lock form-control-feedback"></span>
+        <i style="font-size:26px" class="fas fa-lock form-control-feedback"></i>
       </div>
       <div class="row">
         <div class="col-sm-8">
-          {%if websso == True %}
-          <a href="/login/websso/" type="submit" class="btn btn-primary btn-block btn-flat">Accéder par WebSSO</a>
-          {% endif %}
         </div>
         <!-- /.col -->
         <div class="col-sm-4">
-          <button id="login" type="submit" class="btn btn-green btn-block btn-flat">Acceder</button>
+          <button id="login" type="submit" class="btn btn-block btn-outline-secondary">Login</button>
         </div>
         <!-- /.col -->
         {% if message %}
@@ -81,9 +79,9 @@
 </div>
 
 <!-- JS GLOBAL -->
-<script src="{% static 'plugins/jquery/jquery.js' %}"></script>
-<script src="{% static 'plugins/bootstrap/js/bootstrap.min.js' %}"></script>
-<script src="{% static 'plugins/iCheck/icheck.min.js' %}"></script>
+<script src="{% static 'node_modules/jquery/dist/jquery.js' %}"></script>
+<script src="{% static 'node_modules/bootstrap/dist/js/bootstrap.js' %}"></script>
+<script src="{% static 'node_modules/icheck/icheck.js' %}"></script>
 <script>
   $(function () {
     $('input').iCheck({
